--- a/my-blog-send-email/src/main/resources/templates/mail/MailMessages.html
+++ b/my-blog-send-email/src/main/resources/templates/mail/MailMessages.html
@@ -1,9 +1,47 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <style>
+        th {
+            text-align: left;
+        }
+    </style>
+</head>
 <body>
-<p style="color: red; font-weight: bold" th:text="'Dear ' + ${email} + ','"></p>
-<p th:text="${message}"></p>
-<p>Thanks!</p>
-<img th:src="@{images/thanks.png}" style="display:block" width="200" height="87">
+<div style="text-align: center;background:#e6f2e9">
+    <p style="color: red; font-weight: bold" th:text="'Dear ' + ${email} + ','"></p>
+    <p th:text="${message}"></p>
+    <p>You can reply to this email</p>
+    <table style="margin-left: auto;margin-right: auto;">
+        <tr>
+            <th>
+                Name
+            </th>
+            <td>
+                Phạm Càn Long
+            </td>
+        </tr>
+        <tr>
+            <th>
+                Github
+            </th>
+            <td>
+                <a href="https://github.com/longphamit">https://github.com/longphamit</a>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                Phone
+            </th>
+            <td>
+                +84705799900
+            </td>
+        </tr>
+    </table>
+    <p>Thanks,</p>
+    <p>Devmon</p>
+    <img src="https://s3-hcm-r1.longvan.net/my-blog/thanks.png" style="display:block" width="100%" height="100%">
+</div>
+
 </body>
 </html>
